<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONeS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Toast shown when text is copied to the clipboard [CHAR LIMIT=64] -->
    <string name="toro_edit">Edit</string>
    <string name="toro_add">Add</string>
    <string name="toro_search">Search</string>
    <string name="toro_unknow">Unknow</string>
    <string name="toro_cancel">Cancel</string>
    <string name="toro_select_all">Select All</string>
    <string name="toro_un_select_all">Unselect All</string>
    <string name="toro_edit_delete">Delete(%1$d)</string>
    <string name="toro_delete_selected">Delete Selected Items</string>
    <string name="toro_back">Back</string>
    <string name="toro_send_location">Send Location</string>
    <string name="toro_add_to_contact">Add to a contact</string>
    <string name="hint">hint</string>
    <string name="locationing">locationing</string>
    <string name="get_location_failed">get location failed</string>
    <string name="call_setting">Call Settings</string>
    <!--听筒模式-->
    <string name="receiver_model_title">receiver model</string>
    <string name="receiver_model_key">receiver_model_key</string>
    <!--来电转接-->
    <string name="call_transfer_title">Call transfer</string>
    <string name="call_transfer_to">Call transfer to</string>
    <string name="call_transfer_stop">Call transfer stoped</string>
    <string name="call_transfer_key">call_transfer_key</string>
    <string name="all_calls_transferred">All calls are transferred</string>
    <string name="busy_calls_transferred">Transfer when the line is busy</string>
    <string name="no_answers_calls_transferred">Transfer when no one answers</string>
    <string name="unconnect_calls_transferred">Unable to connect transfer</string>
    <string name="all_calls_transferred_key">Allcalls_are_transferred</string>
    <string name="busy_calls_transferred_key">Transfer_when_the_line_is_busy</string>
    <string name="no_answers_calls_transferred_key">Transfer_when_no_one_answers</string>
    <string name="unconnect_calls_transferred_key">Unable_to_connect_transfer</string>
    <!--通话录音-->
    <string name="call_recording_title">Call recording </string>
    <string name="call_recording_key">call_recording_key </string>
    <string name="call_recording_object">The recording object</string>
    <string name="call_recording_all">All calls</string>
    <string name="call_recording_custom">Custom</string>
    <string name="call_recording_custom_object">Custom object</string>
    <string name="call_recording_strange_number">Strange number</string>
    <string name="call_recording_designated_contact">Designated contact</string>
    <string name="call_recording_select_count">%1$d persons selected</string>
    <string name="call_recording_all_key">call_recording_all_key</string>
    <string name="call_recording_custom_key">call_recording_custom_key</string>
    <string name="call_recording_strange_number_key">call_recording_strange_number_key</string>
    <string name="call_recording_designated_contact_key">call_recording_designated_contact_key</string>
    <string name="please_input_phone_hint">Please enter the transfer number</string>

    <string name="call_transfer_hint">When switched on, all or certain conditions can be transferred to other calls</string>

    <string name="dialog_button_sure">Confirm</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_stop">Stop</string>
    <string name="erro_number">Invalid number</string>
    <string name="recording">Record</string>
    <string name="get_contact_failed">Failed to get contact</string>
    <string name="un_des_contact">Unspecified</string>
    <string name="permission_failed">You have denied the necessary permissions and the application is about to exit</string>
    <string name="toro_contact_pick">Contact selection</string>
    <string name="toro_select_finish_format">Finish</string>
</resources>
