<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <SwitchPreference
        android:layout="@layout/toro_switch_preference"
        android:widgetLayout="@layout/toro_switch"
        android:key="@string/receiver_model_key"
        android:title="@string/receiver_model_title"
        android:defaultValue="true"
        android:summary="summary"/>

    <Preference
        android:layout="@layout/toro_preference"
        android:key="@string/call_transfer_key"
        android:title="@string/call_transfer_title"
        />

    <Preference
        android:layout="@layout/toro_preference"
        android:key="@string/call_recording_key"
        android:title="@string/call_recording_title"
        />

</PreferenceScreen>
