<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:padding="10dp"
    >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="click 0"
            android:id="@+id/button0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="click"
            android:id="@+id/button"/>
    </FrameLayout>

    <com.android.toro.src.view.CustomEditText
        android:id="@+id/phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/toro_dialog_edit_shape"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/please_input_phone_hint"
        android:drawableRight="@drawable/dialog_contact_icon"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/toro_dialog_button_text_selector"
            android:textSize="16dp"
            android:text="@string/dialog_button_stop"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#707070"
            android:textSize="16dp"
            android:text="@string/dialog_button_cancel"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/toro_dialog_button_text_selector"
            android:textSize="16dp"
            android:text="@string/dialog_button_sure"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>